# opencyphal-vehicle-system-management-daemon

./: CMakeLists.txt
.github/workflows/: tests.yml
include/ocvsmd/sdk/: daemon.hpp  defines.hpp  node_command_client.hpp  node_pub_sub.hpp  node_registry_client.hpp
src/cli/: CMakeLists.txt  dsdl_helpers.hpp  fmt_helpers.hpp  main.cpp
src/common/: CMakeLists.txt
src/common/dsdl/ocvsmd/common/ipc/: Route.0.2.dsdl  RouteChannelEnd.0.2.dsdl
src/common/dsdl/ocvsmd/common/svc/node/: AccessRegisters.0.1.dsdl  AccessRegistersKeyValue.0.1.dsdl  AccessRegistersScope.0.1.dsdl  ExecCmd.0.1.dsdl  ListRegisters.0.1.dsdl
src/common/dsdl/ocvsmd/common/svc/relay/: RawPublisher.0.1.dsdl  RawPublisherConfig.0.1.dsdl  RawPublisherCreate.0.1.dsdl  RawPublisherPublish.0.1.dsdl  RawSubscriber.0.1.dsdl  RawSubscriberCreate.0.1.dsdl  RawSubscriberReceive.0.1.dsdl
src/common/ipc/: channel.hpp  client_router.cpp  gateway.hpp  server_router.cpp
src/common/ipc/pipe/: client_pipe.hpp  server_pipe.hpp  socket_base.cpp
src/common/svc/node/: access_registers_spec.hpp  exec_cmd_spec.hpp  list_registers_spec.hpp
src/common/svc/relay/: raw_publisher_spec.hpp  raw_subscriber_spec.hpp
src/daemon/: CMakeLists.txt  main.cpp
src/daemon/engine/: CMakeLists.txt
src/daemon/engine/cyphal/: udp_transport_bag.hpp
src/sdk/: CMakeLists.txt  daemon.cpp  file_server.cpp  node_command_client.cpp  node_registry_client.cpp  sdk_factory.hpp
src/sdk/svc/file_server/: list_roots_client.cpp  list_roots_client.hpp  pop_root_client.cpp  pop_root_client.hpp  push_root_client.cpp  push_root_client.hpp
src/sdk/svc/node/: access_registers_client.cpp  access_registers_client.hpp  exec_cmd_client.cpp  exec_cmd_client.hpp  list_registers_client.cpp  list_registers_client.hpp
test/common/ipc/: gateway_mock.hpp  ipc_gtest_helpers.hpp  test_client_router.cpp  test_server_router.cpp
test/daemon/engine/: CMakeLists.txt
test/daemon/engine/svc/node/: test_exec_cmd_service.cpp
test/daemon/engine/svc/relay/: test_raw_publisher_service.cpp  test_raw_subscriber_service.cpp
(+18 files in other folders)
